fixed height of bio box on mobile and footer font size on mobile

--- a/source/stylesheets/components/content.css
+++ b/source/stylesheets/components/content.css
@@ -115,6 +115,9 @@
   .portfolio__featured-text p,  .portfolio__coming-soon-text p {
     font-size: .85rem;
   }
+  .bio__text {
+    height: fit-content;
+  }
 }
 
 .portfolio__coming-soon {
